@@ -1,4 +1,4 @@
-DIST GPLIGC-1.5.1.tar.gz 995346 RMD160 f4076f8e08e7b24d3b87de8a28af1da4bf851ff2 SHA1 ea08ea9bdeb86454d35f1640c33263806aac1bf5 SHA256 a93bccfc814c6d6ef04df84bf9620168bd9d8cac9bbefd1d026e939f29259c04
-EBUILD gpligc-1.5.1.ebuild 2711 RMD160 c6edb8b88e14a93ab1a6a7b37650517056b7733e SHA1 63241df745e251c7195a5e3c22acc9912980b803 SHA256 6253560534034c4a2ef89acf5277996f231b04f9c8530d2751f3288c31a8d1c6
-MISC ChangeLog 416 RMD160 48c0c2f71b6bc6a53c90cb64c5dd8010fe19773f SHA1 4604c7717b1d1eb1282480e4c937225c961d37d5 SHA256 1bb78f5cf3b07d21b9cbb5cea4fc8650b8252a5ba1c1a40f66cbd8253a464d31
+DIST GPLIGC-1.6-src.tar.gz 1057195 RMD160 8689fedd61fb3c5a6a132dc4be6e2a4c6c81404e SHA1 9451a95e017d8e659e4f12cd546c43e7cfb76551 SHA256 363ec1dfd93f3af70674dd0fe41b482f8334c8fe0efde4f0aaf699fc5526af7e
+EBUILD gpligc-1.6.ebuild 2423 RMD160 db11559bfcaf1fa2e054e994697d4d624de970e4 SHA1 aca0c3075ffc133965b3ac62411c732692bc0977 SHA256 43a88325613f71049fa182455d1d358e2782ef7b7d24e2df62d1c0c5bfe1cb35
+MISC ChangeLog 561 RMD160 e3c9e30bf474bc8c5d7b3e0f9bd5270e325b9dfa SHA1 68426a5220c99d912cde39702c7508406241ad79 SHA256 4e355fb0ccad4035a17fb345bc9338d38855f9eb604fac40ccace748eb697c9a
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
